--- a/taquin.css
+++ b/taquin.css
@@ -19,3 +19,20 @@ body {
     height: 80px;
     visibility: hidden;
 }
+
+#choix {
+  margin-left: 120px;
+
+}
+
+input[type=radio] {
+ background-color:transparent;
+ border:none;
+ width:10px;
+ }
+
+ input[type=submit], input[type=reset] {
+  margin-left:5px;
+  box-shadow:1px 1px 1px #D83F3D;
+  cursor:pointer;
+}
