--- a/taquin.css
+++ b/taquin.css
@@ -62,18 +62,18 @@ body {
 #grid {
     text-align: center;
     margin-top: 50px;
+    width:
 }
 
 
 
 #message {
-  font-size: 200%;
+  text-align: center;
+  font-size: 150%;
   margin-top: 50px;
-  margin-left: 30%;
-  margin-right: 30%;
-  margin-bottom: 30px;
-  padding: 20px;
-  height: 80px;
+  margin-left: 5%;
+  margin-right: 0px;
+  margin-bottom: 20px;
 }
 
 #message.hidden {
@@ -112,4 +112,11 @@ h1 {
   display:block;
   margin-left: auto;
   margin-right: auto;
+}
+
+
+#jeu{
+  text-align: center;
+  margin: auto;
+  margin-top: 60px;
 }
